--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "sass":"sass --watch ./style.scss:./style-compressed.css --style compressed"
+      "sass":"sass --watch ./css/scss/style.scss:./css/style-compressed.css --style compressed"
   },
   "author": "",
   "license": "ISC"
